<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">说法堂律师</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login_title">您好,说法堂律师</string>
    <string name="login_mobile">手机号</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="forget_password_w">忘记密码?</string>
    <string name="no_account">还没有账号</string>
    <string name="register_quik">马上注册</string>
    <string name="register">注册</string>
    <string name="verify">验证</string>
    <string name="verify_number">验证码</string>
    <string name="set_password">设置密码</string>
    <string name="confirm_password">再次设置密码</string>
    <string name="confirm">确定</string>
    <string name="confirm_update">确定修改</string>
    <string name="cancel">取消</string>
    <string name="forget_password">忘记密码</string>
    <string name="update_password">修改密码</string>
    <string name="input_old_passowrd">请输入旧密码</string>
    <string name="input_old_passowrd_error">旧密码错误</string>
    <string name="input_new_passowrd">请输入新密码</string>
    <string name="input_confirm_new_passowrd">请确认新密码</string>
    <string name="old_passowrd_equle_new">新密码与旧密码相同</string>
    <string name="input_two_new_passowrd_no_equle">两次新密码不相同</string>
    <string name="save">保存</string>
    <string name="work_on">上班</string>
    <string name="work_off">下班</string>

    <string name="menu_main">听单</string>
    <string name="menu_order">我的订单</string>
    <string name="menu_advice">我的咨询</string>
    <string name="menu_message">我的消息</string>
    <string name="menu_tool">法律工具</string>
    <string name="menu_help">帮助中心</string>
    <string name="menu_about">关于我们</string>
    
    <string name="contact_us">联系我们</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_des">请输入您宝贵的意见</string>
    <string name="feedback_des_is_empty">请填写您的宝贵意见</string>
    <string name="submit">提交</string>

    <string name="input_mobile">请输入手机号</string>
    <string name="input_right_mobile">请输入有效的手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_veviry">请输入验证码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="input_password_not_eque">两次输入的密码不一致</string>

    <string name="person">账户信息</string>
    <string name="user">用户信息</string>

    <string name="take_photo">拍照</string>
    <string name="choose_photo">相册</string>

    <string name="lawyer_name">姓名</string>
    <string name="lawyer_birthday">出生年月</string>
    <string name="lawyer_sex">性别</string>
    <string name="lawyer_first_practice_time">首次执业日期</string>
    <string name="lawyer_expertIn">擅长领域</string>
    <string name="lawyer_mobile">联系手机</string>
    <string name="lawyer_tel">联系电话</string>
    <string name="lawyer_certificate_no">执业证书编号</string>
    <string name="lawyer_idcard">身份证号码</string>
    <string name="lawyer_firmName">律所名称</string>
    <string name="lawyer_upload_certificate">上传证件</string>

    <string name="input_lawyer_name">填写律师姓名</string>
    <string name="input_lawyer_expertIn">填写擅长领域</string>
    <string name="input_lawyer_mobile">填写联系手机</string>
    <string name="input_lawyer_tel">填写联系电话</string>
    <string name="input_lawyer_certificate_no">填写执业证书编号</string>
    <string name="input_lawyer_idcard">填写身份证号码</string>
    <string name="input_lawyer_firmName"></string>

    <string name="done">完成</string>

    <string name="detail">详情</string>
    <string name="order">接单</string>


</resources>
