<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/vevifyButton"
            android:layout_width="100dp"
            android:layout_alignParentRight="true"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="20dp"
            android:padding="3dip"
            android:background="@drawable/btn_login"
            android:text="@string/verify"
            android:onClick="VerifyClick"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text" />

        <EditText
            android:id="@+id/mobileEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginRight="5dp"
            android:layout_alignBottom="@+id/vevifyButton"
            android:background="@drawable/input_bg"
            android:layout_toLeftOf="@+id/vevifyButton"
            android:hint="@string/login_mobile"
            android:inputType="number"
            android:padding="3dip"
            android:maxLength="11"
            android:textColorHint="#aab2be"
            android:textColor="@color/edittext_input_color"
            android:textSize="@dimen/input_text"
            android:layout_alignTop="@+id/vevifyButton" />

        <EditText
            android:id="@+id/verifyEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:hint="@string/verify_number"
            android:inputType="text"
            android:layout_below="@+id/mobileEditText"
            android:padding="3dip"
            android:textColorHint="#aab2be"
            android:textColor="@color/edittext_input_color"
            android:textSize="@dimen/input_text" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:hint="@string/set_password"
            android:inputType="textPassword"
            android:layout_below="@+id/verifyEditText"
            android:padding="3dip"
            android:textColorHint="#aab2be"
            android:textColor="@color/edittext_input_color"
            android:textSize="@dimen/input_text" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_below="@+id/passwordEditText"
            android:padding="3dip"
            android:textColorHint="#aab2be"
            android:textColor="@color/edittext_input_color"
            android:textSize="@dimen/input_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/confirmPasswordEditText"
            android:background="@drawable/btn_login"
            android:text="@string/confirm"
            android:onClick="ConfirmClick"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text" />
    </RelativeLayout>

</LinearLayout>
