<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/oldPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:hint="@string/input_old_passowrd"
            android:inputType="textPassword"
            android:padding="3dip"
            android:textColorHint="#aab2be"
            android:textColor="@color/edittext_input_color"
            android:textSize="@dimen/input_text" />

        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:hint="@string/input_new_passowrd"
            android:inputType="textPassword"
            android:layout_below="@+id/oldPasswordEditText"
            android:padding="3dip"
            android:textColorHint="#aab2be"
            android:textColor="@color/edittext_input_color"
            android:textSize="@dimen/input_text" />

        <EditText
            android:id="@+id/confirmNewPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:hint="@string/input_confirm_new_passowrd"
            android:inputType="textPassword"
            android:layout_below="@+id/newPasswordEditText"
            android:padding="3dip"
            android:textColorHint="#aab2be"
            android:textColor="@color/edittext_input_color"
            android:textSize="@dimen/input_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/confirmNewPasswordEditText"
            android:background="@drawable/btn_login"
            android:text="@string/confirm_update"
            android:onClick="ConfirmClick"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text" />
    </RelativeLayout>

</LinearLayout>
